refactor: change post backup to restore
